--- a/t1rho_blog/T1rho.html
+++ b/t1rho_blog/T1rho.html
@@ -4,7 +4,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8" />
-<title>T1rho (2) (3)</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>T1rho</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -12217,11 +12217,10 @@ T<sub>1𝞺</sub> has been applied to many clinical applications including the b
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class=figure_caption>
-<center>
-<b style="text-align:justify;">
+<p style="text-align:justify;">
+<b>
 Figure 1. Simplified diagram of a T<sub>1𝞺</sub> Spin-Lock pulse sequence illustrating the tip-down RF pulse, spin-lock pulse (<i>θ</i><sub>y</sub>), the tip-up RF pulse and the crusher to dephase residual signal in the transverse plane. 
 </b>
-</center>
 </div><p><p></p>
 <center><img src="t1rho_pulsesequence.png" style="width:800px;height:auto;"></center>
 </div>
@@ -12272,11 +12271,10 @@ where α is the actual tip-up/tip-down RF pulse flip angle, <i>θ</i> is the tot
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class=figure_caption>
-<center>
-<b style="text-align:justify;">
+<p style="text-align:justify;">
+<b>
 Figure 2. Rotating frame representation of the T<sub>1𝞺</sub> experiment (a). In the rotating frame of reference, the spins experience an effective RF field, ω<sub>eff</sub>. Typically, the spin-lock pulse is applied on-resonance and the spins experience ω<sub>eff</sub> = ω<sub>1</sub> = ɣB<sub>1</sub>. If an off-resonance pulse is used, the spins experience ω<sub>eff</sub> = Δ + ω<sub>1</sub>, where Δ is the off-resonance component. The timing diagram (b) of a simplified T<sub>1𝞺</sub> experiment illustrating the suspension of some relaxation processes during the application of the spin-lock pulse, <i>θ</i><sub>y</sub>. After the spin-lock pulse is removed, the magnetization relaxes as a free induction decay, FID. 
 </b>
-</center>
 </div><p><p></p>
 <center><img src="t1rho_signal_curve.png" style="width:800px;height:auto;"></center>
 </div>
@@ -12327,11 +12325,10 @@ T<sub>1𝞺</sub> relaxation is typically modeled and fitted using a monoexponen
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <div class=figure_caption>
-<center>
-<b style="text-align:justify;">
+<p style="text-align:justify;">
+<b>>
 Figure 3. An example T<sub>1𝞺</sub> relaxation map of cartilage in the knee, using a spin-lock frequency of 350 Hz, five TSLs linearly spaced from 2-82 ms, and TR/TE 3300 ms/10 ms. Reproduced with permission from (Wang et al. 2015).
 </b>
-</center>
 </div><p><p></p>
 <center><img src="t1rho_map.png" style="width:800px;height:auto;"></center>
 </div>
